Show mnemonics improved

--- a/PlutoWallet/Components/Settings/ShowMnemonic.xaml
+++ b/PlutoWallet/Components/Settings/ShowMnemonic.xaml
@@ -2,8 +2,13 @@
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:card="clr-namespace:PlutoWallet.Components.Card"
+             xmlns:settings="clr-namespace:PlutoWallet.Components.Settings"
              x:Class="PlutoWallet.Components.Settings.ShowMnemonic"
             HeightRequest="120">
+    <ContentView.BindingContext>
+        <settings:ShowMnemonicViewModel />
+
+    </ContentView.BindingContext>
     <card:Card>
         <card:Card.View>
             <AbsoluteLayout AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1"
@@ -18,7 +23,7 @@
                             VerticalTextAlignment="End">
                             <Label.FormattedText>
                                 <FormattedString>
-                                    <Span FontAttributes="Bold" Text="Show SecretKey (click 10 times)"/>
+                                    <Span FontAttributes="Bold" Text="{Binding Title}"/>
 
                                 </FormattedString>
 
