--- a/PlutoWallet/View/SettingsPage.xaml
+++ b/PlutoWallet/View/SettingsPage.xaml
@@ -39,7 +39,7 @@
             
         </ScrollView>
 
-        <navigationbar:TopNavigationBar Title="Predefined layouts"
+        <navigationbar:TopNavigationBar Title="Settings"
                                         x:Name="topNavigationBar" />
 
     </AbsoluteLayout>
