--- a/PlutoWallet/Components/Nft/NftDescriptionView.xaml
+++ b/PlutoWallet/Components/Nft/NftDescriptionView.xaml
@@ -9,7 +9,7 @@
             <AbsoluteLayout AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1"
                             AbsoluteLayout.LayoutFlags="All">
             <Grid WidthRequest="{Binding Source={x:Reference card}, Path=Width}"
-                  Padding="10, 0, 10, 0" >
+                   >
                 <Grid.RowDefinitions>
                     <RowDefinition Height="30" />
                     <RowDefinition Height="*" />
@@ -19,7 +19,9 @@
                 <Label x:Name="descriptionTitleLabel"
                        VerticalTextAlignment="Center"
                        HorizontalTextAlignment="Start"
-                       Grid.Row="0">
+                       Grid.Row="0"
+                       Margin="10, 0, 20, 0"
+                       >
                     <Label.FormattedText>
                         <FormattedString>
                             <Span FontAttributes="Bold"
@@ -33,6 +35,7 @@
 
                 <Label TextType="Html" x:Name="descriptionLabel" TextColor="{AppThemeBinding Light=Black, Dark=White}"
                        Grid.Row="1"
+                       Margin="10, 0, 20, 0"
                        />
                 
 
