--- a/PlutoWallet/View/NftDetailPage.xaml
+++ b/PlutoWallet/View/NftDetailPage.xaml
@@ -21,7 +21,8 @@
                                         Spacing="15"
                                         Padding="20, 15, 20, 200">
                     <nft:NftTitleView Name="{Binding Name}"
-                                      Endpoint="{Binding Endpoint}" />
+                                      Endpoint="{Binding Endpoint}"
+                                      KodadotUnlockableUrl="{Binding KodadotUnlockableUrl}"/>
 
                     <nft:NftDescriptionView Description="{Binding Description}" />
 
