--- a/PlutoWallet/Components/Nft/NftTitleView.xaml
+++ b/PlutoWallet/Components/Nft/NftTitleView.xaml
@@ -15,10 +15,11 @@
                                      Spacing="10">
                     <HorizontalStackLayout Spacing="10">
                         <Label HorizontalOptions="Start"
+                               VerticalOptions="End"
                                 VerticalTextAlignment="End"
                                 HorizontalTextAlignment="Center"
-                                FontSize="20"
-                                MaximumHeightRequest="20"
+                                FontSize="18"
+                                HeightRequest="20"
                                 Margin="10, 0, 0, 0"
                                 >
                             <Label.FormattedText>
@@ -31,11 +32,12 @@
 
                         </Label>
                         <Label HorizontalOptions="Start"
+                               VerticalOptions="End"
                                 VerticalTextAlignment="End"
                                 HorizontalTextAlignment="Start"
                                 FontSize="10"
                                 TextColor="#888888"
-                                MaximumHeightRequest="20"
+                                HeightRequest="20"
                                 Margin="0, 0, 20, 0">
                             <Label.FormattedText>
                                 <FormattedString>
