--- a/PlutoWallet/Components/HydraDX/AssetLiquidityView.xaml
+++ b/PlutoWallet/Components/HydraDX/AssetLiquidityView.xaml
@@ -5,7 +5,7 @@
              HeightRequest="30"
              x:Name="view">
     <Border StrokeThickness="0"
-            BackgroundColor="{AppThemeBinding Light=#fdfdfd, Dark={StaticResource Black}}"
+            BackgroundColor="#041b47"
             Padding="10, 0, 10, 0">
         <Border.Shadow>
             <Shadow Brush="Black"
@@ -22,29 +22,26 @@
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="100"/>
                 <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="30"/>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="120"/>
             </Grid.ColumnDefinitions>
 
             <Label x:Name="amountLabel"
+                   TextColor="#dddddd"
                    HorizontalTextAlignment="End"
                    VerticalTextAlignment="Center" />
             <Label x:Name="symbolLabel"
+                   TextColor="#dddddd"
                    HorizontalTextAlignment="Start"
                    VerticalTextAlignment="Center"
                    Margin="5, 0, 0, 0"
                    Grid.Column="1"/>
-            <Image x:Name="chainIcon"
-                           HeightRequest="15" WidthRequest="15"
-                           Margin="10, 0, 10, 0"
-                           Grid.Column="2"/>
 
             <Label x:Name="usdLabel"
+                   TextColor="#dddddd"
                    HorizontalTextAlignment="End"
                    VerticalTextAlignment="Center"
-                   TextColor="#888888"
-                   Grid.Column="4"/>
+                   Grid.Column="3"/>
         </Grid>
     </Border>
 </ContentView>
