--- a/PlutoWallet/View/NftView.xaml
+++ b/PlutoWallet/View/NftView.xaml
@@ -5,6 +5,7 @@
              x:Class="PlutoWallet.View.NftView">
     <ScrollView
             Orientation="Vertical"
+            x:Name="scroll"
             AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1" AbsoluteLayout.LayoutFlags="All">
         <VerticalStackLayout Padding="20, 65, 20, 200"
                              Spacing="15">
