--- a/PlutoWallet/Components/AzeroId/AzeroPrimaryNameView.xaml
+++ b/PlutoWallet/Components/AzeroId/AzeroPrimaryNameView.xaml
@@ -8,23 +8,19 @@
         <card:Card.View>
             <AbsoluteLayout  AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1" AbsoluteLayout.LayoutFlags="All"
                              x:Name="absoluteLayout">
-                <Image AbsoluteLayout.LayoutBounds="0, 20, 50, 50"
-                       Source="azeroid.png"/>
 
                 <VerticalStackLayout AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1" AbsoluteLayout.LayoutFlags="All">
-                    <Label
-                        HeightRequest="30"
-                        VerticalTextAlignment="Center"
-                        Text="AZERO.ID"
-                        FontAttributes="Bold"
+                    <Image
+                        Margin="5"
+                        HeightRequest="16"
                         HorizontalOptions="Center"
-                        TextColor="#e6fd39"/>
+                        Source="azeroidtext.png" />
                     
                 </VerticalStackLayout>
 
                 <Label AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1"
                        AbsoluteLayout.LayoutFlags="All"
-                       Margin="70, 0, 0, 0"
+                       Margin="0, 0, 0, 0"  
                         HeightRequest="60"
                         VerticalTextAlignment="Center"
                         TextColor="White"
