--- a/PlutoWallet/Components/HydraDX/OmnipoolLiquidityView.xaml
+++ b/PlutoWallet/Components/HydraDX/OmnipoolLiquidityView.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:card="clr-namespace:PlutoWallet.Components.Card" xmlns:hydradx="clr-namespace:PlutoWallet.Components.HydraDX"
+             xmlns:card="clr-namespace:PlutoWallet.Components.Card"
+             xmlns:hydradx="clr-namespace:PlutoWallet.Components.HydraDX"
              x:Class="PlutoWallet.Components.HydraDX.OmnipoolLiquidityView">
      <card:Card Color="#031538">
         <card:Card.View>
@@ -19,7 +20,7 @@
                         HorizontalOptions="Center"
                         TextColor="#f653a2"
                         FontFamily="FontOver" />
-                    <Label HeightRequest="60"
+                    <Label HeightRequest="50"
                             VerticalTextAlignment="Center"
                             FontAttributes="Bold"
                             HorizontalTextAlignment="Center"
@@ -43,7 +44,8 @@
                         <DataTemplate>
                             <hydradx:AssetLiquidityView Amount="{Binding Amount}"
                                                         Symbol="{Binding Symbol}"
-                                                        UsdValue="{Binding UsdValue}" />
+                                                        UsdValue="{Binding UsdValue}"
+                                                        />
 
                         </DataTemplate>
 
