--- a/PlutoWallet/View/AddCustomItemPage.xaml
+++ b/PlutoWallet/View/AddCustomItemPage.xaml
@@ -1,9 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:viewmodel="clr-namespace:PlutoWallet.ViewModel" xmlns:customlayouts="clr-namespace:PlutoWallet.Components.CustomLayouts" xmlns:navigationbar="clr-namespace:PlutoWallet.Components.NavigationBar"
+             xmlns:viewmodel="clr-namespace:PlutoWallet.ViewModel"
+             xmlns:customlayouts="clr-namespace:PlutoWallet.Components.CustomLayouts"
+             xmlns:navigationbar="clr-namespace:PlutoWallet.Components.NavigationBar"
              x:Class="PlutoWallet.View.AddCustomItemPage"
-             
+             BackgroundColor="Black"
              Title="AddCustomItemPage">
     <ContentPage.BindingContext>
         <viewmodel:AddCustomItemViewModel />
@@ -13,7 +15,9 @@
     <AbsoluteLayout AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1" AbsoluteLayout.LayoutFlags="All">
         
         <Image AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1" AbsoluteLayout.LayoutFlags="All"
-               Source="space.png" Aspect="AspectFill"/>
+               Source="{AppThemeBinding Light=whitebackground.png, Dark=darkbackground2.png}"
+               Opacity="{AppThemeBinding Light=0.96}"
+               Aspect="AspectFill"/>
 
         <ScrollView Orientation="Vertical"
                     x:Name="scrollView"
