--- a/PlutoWallet/View/BeginPage.xaml
+++ b/PlutoWallet/View/BeginPage.xaml
@@ -3,7 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PlutoWallet.View.BeginPage"
              Title="BeginPage"
-             BackgroundColor="White">
+             BackgroundColor="White"
+             >
     <AbsoluteLayout AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1"
                     AbsoluteLayout.LayoutFlags="All">
 
