--- a/PlutoWallet/View/CustomCallPage.xaml
+++ b/PlutoWallet/View/CustomCallPage.xaml
@@ -3,7 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:transactionrequest="clr-namespace:PlutoWallet.Components.TransactionRequest"
              xmlns:argumentsview="clr-namespace:PlutoWallet.Components.ArgumentsView"
-             x:Class="PlutoWallet.View.CustomCallPage">
+             x:Class="PlutoWallet.View.CustomCallPage"
+             BackgroundColor="Black">
     <AbsoluteLayout x:Name="absoluteLayout"
                     AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1" AbsoluteLayout.LayoutFlags="All">
 
