--- a/PlutoWallet/View/MnemonicsPage.xaml
+++ b/PlutoWallet/View/MnemonicsPage.xaml
@@ -2,16 +2,20 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:viewmodel="clr-namespace:PlutoWallet.ViewModel"
-             xmlns:card="clr-namespace:PlutoWallet.Components.Card" xmlns:navigationbar="clr-namespace:PlutoWallet.Components.NavigationBar"
+             xmlns:card="clr-namespace:PlutoWallet.Components.Card"
+             xmlns:navigationbar="clr-namespace:PlutoWallet.Components.NavigationBar"
              x:Class="PlutoWallet.View.MnemonicsPage"
-             Title="Mnemonics">
+             Title="Mnemonics"
+             BackgroundColor="Black">
     <ContentPage.BindingContext>
         <viewmodel:MnemonicsViewModel x:Name="viewModel" />
     </ContentPage.BindingContext>
    <AbsoluteLayout AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1" AbsoluteLayout.LayoutFlags="All">
         
         <Image AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1" AbsoluteLayout.LayoutFlags="All"
-               Source="space.png" Aspect="AspectFill"/>
+               Source="{AppThemeBinding Light=whitebackground.png, Dark=darkbackground2.png}"
+               Opacity="{AppThemeBinding Light=0.96}"
+               Aspect="AspectFill"/>
 
         <ScrollView Orientation="Vertical"
                     x:Name="scrollView"
