--- a/PlutoWallet/View/NftView.xaml
+++ b/PlutoWallet/View/NftView.xaml
@@ -7,11 +7,12 @@
             Orientation="Vertical"
             x:Name="scroll"
             AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1" AbsoluteLayout.LayoutFlags="All">
-        <VerticalStackLayout Padding="20, 65, 20, 200"
+        <VerticalStackLayout Padding="0, 65, 0, 200"
                              Spacing="15">
             <VerticalStackLayout
                 WidthRequest="{Binding Source={x:Reference scroll}, Path=Width}"
                 HorizontalOptions="Center"
+                Padding="20, 0, 20, 0"
                 Spacing="15"
                 BindableLayout.ItemsSource="{Binding Nfts}">
                 <BindableLayout.ItemTemplate>
@@ -29,7 +30,7 @@
                 </BindableLayout.ItemTemplate>
             </VerticalStackLayout>
 
-            <nft:NftLoadingView />
+            <nft:NftLoadingView Margin="20, 0, 20, 0" />
 
         </VerticalStackLayout>
         
