Assets and Tokens pallet decimals added

--- a/PlutoWallet/Components/AssetSelect/AssetSelectView.xaml
+++ b/PlutoWallet/Components/AssetSelect/AssetSelectView.xaml
@@ -29,7 +29,8 @@
                                                            IsSelected="{Binding IsSelected}"
                                                            Endpoint="{Binding Endpoint}"
                                                            Pallet="{Binding Pallet}"
-                                                           AssetId="{Binding AssetId}" />
+                                                           AssetId="{Binding AssetId}"
+                                                           Decimals="{Binding Decimals}" />
                         </DataTemplate>
 
                     </BindableLayout.ItemTemplate>
